<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="13dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="13dp"
        tools:context=".Login">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/podaj_adres_e_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/podaj_has_o" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/zaloguj_si"/>

        <Button
            android:id="@+id/buttonGoogleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Zaloguj przez Google" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/buttonBypass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WŁAM SIĘ DO APLIKACJI" />

    </LinearLayout>

    <TextView
    android:id="@+id/registerSwap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/utw_rz_nowe_konto"
    android:layout_gravity="center"
    android:textSize="17sp"
    android:textStyle="normal"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="20dp"/>

    </RelativeLayout>